# advent2025

./: .gitignore  Cargo.toml
day10/: day10.rs  input.txt.age
day10/part1/: main.odin
day10/part2/: main.odin
day2/: day2.c
day3/: day3.rs  input.txt.age
day4/: day4.c  day4.odin  day4.rs
day5/: day5.c
day6/: day6-part2.c  day6.c
day8/: day8.odin  input.txt.age
dumpster/: numbers.c
utils/: lib.rs
