[package]
name = "advent2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"

[[bin]]
name = "day5"
path = "day5/day5.rs"

[[bin]]
name = "day6"
path = "day6/day6.rs"

[[bin]]
name = "day9"
path = "day9/day9.rs"

[[bin]]
name = "day10"
path = "day10/day10.rs"

[lib]
path = "utils/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[features]
perf = []

[dependencies]
rayon = "1.11.0"
memmap2 = "0.9"
memchr = "2.7"
itertools = "0.14.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
ahash = "0.8.12"
rustc-hash = "2.1.1"
derive_hash_fast = "0.2.3"
bytemuck = { version = "1.24.0", features = ["avx512_simd", "aarch64_simd", "derive", "const_zeroed"] }
num_cpus = "1.17.0"
